--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/styles.css" />
-     <title>NuCamp: A Better Way To Camp test</title>
+     <title>NuCamp: A Better Way To Camp</title>
 </head>
 
 <body>
