--- a/index.html
+++ b/index.html
@@ -31,11 +31,71 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-xs col-md-4 col-xl-2">
-                    <a href="#reserveForm" role="button" class="btn btn-lg btn-info" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>">Reserve Campsite</a>
+                    <a href="#reserveModal" role="button" class="btn btn-lg btn-info" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
                 </div>
             </div>
         </div>
     </header>
+
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header bg-info">
+                    <h3 class="modal-title text-white">Reserve a Campsite</h3>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="reserveModal">
+                        <div class=" form-group row">
+                            <div class="col-sm col-form-label">
+                                <label for="numCampers">Number of Campers</label>
+                            </div>
+                            <div class="col-sm">
+                                <select name="numCampers" id="numCampers" class="form-control">
+                                    <option selected>Select...</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-sm col-form-label">
+                                <label for="date">Date</label>
+                            </div>
+                            <div class="col-sm">
+                                <input type="date" id="date" name="date" placeholder="MM/DD/YYYY" class="form-control"/>
+                            </div>
+                        </div>
+                        <div class="form-group row ">
+                            <div class=" col-12 col-sm-6 col-form-label">
+                                <label for="campsite type">Campsite Type</label>
+                            </div>
+                            <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-primary active bg-success">
+                                      <input type="radio" name="siteType" id="siteTent" checked> Tent
+                                    </label>
+                                    <label class="btn btn-secondary bg-primary">
+                                      <input type="radio" name="siteType" id="siteRV"> RV
+                                    </label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <button type="cancel" class="btn btn-secondary">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Search</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 ​
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
@@ -186,47 +246,6 @@
         </div>
     </div>
 ​
-    <div class="row row-content align-items-center">
-        <div class="col col-sm-6 mx-auto">
-            <div class="card">
-                <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
-                <div class="card-body">
-                    <form id="reserveForm">
-                        <div class=" form-group row">
-                            <div class="col-sm col-form-label">
-                                <label for="numCampers">Number of Campers</label>
-                            </div>
-                            <div class="col-sm">
-                                <select name="numCampers" id="numCampers" class="form-control">
-                                    <option selected>Select...</option>
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="5">5</option>
-                                    <option value="6">6</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="col-sm col-form-label">
-                                <label for="date">Date</label>
-                            </div>
-                            <div class="col-sm">
-                                <input type="date" id="date" name="date" placeholder="MM/DD/YYYY" class="form-control"/>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <button type="submit" class="btn btn-primary">Search</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-​
     <footer class="site-footer">
         <div class="container">
             <div class="row">
@@ -258,12 +277,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <script>
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
-    </script>
 ​
 </body>
 ​
